[metadata]
name = casatests
version = 0.0.1
author = Common Astronomy Software Applications
author_email = casa-feedback@nrao.edu
description =  Place to store CASA test scripts
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://github.com/casangi/casatests
project_urls =
    Hosted Results = casangi.github.io/casatests/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src
